--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@ PORT=5000
 NODE_ENV=development
 
 
-SEQUELIZE_HOST = 103.41.112.89
+SEQUELIZE_HOST = 103.153.141.33
 SEQUELIZE_PORT = 3306
-SEQUELIZE_SCHEMA_TIMEORDER = timeorder 
-SEQUELIZE_USER = admin
-SEQUELIZE_USER_PASSWORD = admin1234
+SEQUELIZE_SCHEMA_TIMEORDER =  timeorder
+SEQUELIZE_USER = root
+SEQUELIZE_USER_PASSWORD = Linko@0929
 SEQUELIZE_DIALECT = mysql
 
 
