--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^12.0.3",
+    "dotenv": "^12.0.4",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
     "helmet": "^7.1.0",
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.7.7",
     "sequelize": "^6.35.1",
     "sequelize-auto": "^0.8.8",
